# greet

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: nix-build.yaml
src/: greeting.cpp  greeting.h  main.cpp
